# firmir-core

./: CMakeLists.txt  README.md  build.sh  main.cpp
src/: event_loop.cpp  event_loop.h  fm_object.cpp  fm_object.h  fm_object_p.h  fm_visibility.h  logging.cpp  logging.h  object.cpp  object.h  settings_file.cpp  settings_file.h  timer.cpp  timer.h  types.cpp  types.h
